fix(docs/qkd-air.ipynb): fix typos, fix the average efficiency calculation error in IR simulation

--- a/docs/qkd-air.ipynb
+++ b/docs/qkd-air.ipynb
@@ -11,7 +11,7 @@
     "> 1. Zhou, H. et al. Appending Information Reconciliation for Quantum Key Distribution. Preprint at https://doi.org/10.48550/arXiv.2204.06971 (2022).\n",
     "> 2. Bioglio, V., Gabry, F. & Land, I. Low-Complexity Puncturing and Shortening of Polar Codes. Preprint at https://doi.org/10.48550/arXiv.1701.06458 (2017).\n",
     "> 3. Tal, I. & Vardy, A. How to Construct Polar Codes. Preprint at https://doi.org/10.48550/arXiv.1105.6164 (2013).\n",
-    "> 4. Cassagne, A. et al. AFF3CT: A Fast Forward Error Correction Toolbox! Elsevier SoftwareX 10, 100345 (2019).\n",
+    "> 4. Cassagne, A. et al. AFF3CT: A Fast Forward Error Correction Toolbox! Elsevier SoftwareX 10, 100345 (2019). https://github.com/aff3ct/aff3ct\n",
     "\n",
     "**Short summary: Increase the size of frozen vector until reconciliation success.**\n",
     "\n",
@@ -31,16 +31,16 @@
     "Now, at the begining of IR process, let Alice and Bob hold two bit strings as their sifted KEY $K_s^A$ and $K_s^B$, respectively. \n",
     "The IR is then conducted as follows: \n",
     "\n",
-    "1. Alice fills the $L$-length bit string $K_s^A$ into the non-frozen positions of a all-zero $N$-length bit string, obtain $u_A$; Similarly Bob use his sifted KEY $K_s^B$ to obtain $u_B$;\n",
-    "2. Alice feeds $u_A$ to the polar encoder. \n",
-    "   The polar encoder will apply the polar transformation $G^{\\log_2 N} = T^{\\otimes \\log_2 N}$, return $x_A = u_A \\cdot T^{\\otimes \\log_2 N}$, while the shortened bits will remain 0. \n",
+    "1. Alice fills the $L$-length bit string $K_s^A$ into the non-frozen positions of an all-zero $N$-length bit string, obtain $\\hat{K}_s^A$; Similarly, Bob use his sifted KEY $K_s^B$ to obtain $\\hat{K}_s^B$;\n",
+    "2. Alice feeds $\\hat{K}_s^A$ to the polar encoder. \n",
+    "   The polar encoder will apply the polar transformation $G^{\\log_2 N} = T^{\\otimes \\log_2 N}$, return $u_A = \\hat{K}_s^A \\cdot T^{\\otimes \\log_2 N}$, while the shortened bits will remain 0 by the design of the shortening method. \n",
     "   Note that typically there will be bit-reversal operation after the polarization, but here we omit it for simplicity (this only differs from Arikan's original polar codes in the ordering of the code bits), and $T$ is the polarization kernel;\n",
-    "3. Alice extracts the information bits of $x_A$, obtains bit string $M_A$, and extracts the frozen bits of $x_A$, obtains syndrome bit string $S_A$, according to the frozen vector;\n",
-    "4. Alice applies CRC check to $x_A$, obtain the CRC tag $T$;\n",
-    "5. Alice send CRC tag $T$ and syndrome $S_A$ to Bob; \n",
-    "6. Bob feeds $u_B$ as codeword and syndrome $S_A$ as frozen bits to the polar decoder, corrects the error in $u_B$ and obtain $x_B$;\n",
-    "7. Bob extracts the information bits in $x_B$, obtains $M_B$ then applies CRC check, and obtains CRC tag $T_B$;\n",
-    "8. Bob receives $T_A$, compares $T_A$ and $T_B$, if they are the same, then Bob publicly announces that the IR process is successful. \n",
+    "3. Alice calculates the CRC tag $T_A = \\mathrm{CRC}\\left( u^A \\right)$, then sents it to Bob via public channel;\n",
+    "4. Alice extracts extracts the frozen bits of $u_A$ according to the frozen vector, obtains syndrome bit string $S_A$;\n",
+    "5. Alice send $S_A$ through the public channel;\n",
+    "6. Bob feeds $\\hat{K}_s^B$ as codeword and syndrome $S_A$ as frozen bits to the polar decoder, corrects the error in $\\hat{K}_s^B$ and obtain $u_B$;\n",
+    "7. Bob applies CRC check to $u_B$, and obtains CRC tag $T_B = \\mathrm{CRC}(u_B)$;\n",
+    "8. Bob $T_A$ and $T_B$, if they are the same, then Bob publicly announces that the IR process is successful. \n",
     "\n",
     "This one-shot CRC-checked polar codes-based IR scheme has some drawbacks: \n",
     "- **Low flexibility on sifted KEY length $L$**: For different sifted KEY length $L$, Alice and Bob needs lots of experiments or simulation to find a reasonable efficiency, otherwise high failure rate or low secret KEY yield will be observed; \n",
@@ -50,15 +50,15 @@
     "\n",
     "![Figure-1 in AIR Paper](./images/fig_ref_2.png)\n",
     "\n",
-    "Before the start of QKD, Alice and Bob agree with the number of stages of reconciliation, $R_m$, as well as the reconciliation efficiency of each stage. \n",
-    "The reconciliation efficiency increases as stage proceed to the next stage, and since the frozen bits is selected by bit-channel reliability, the corresponding set of frozen bits is always contained in the one of the next stage. \n",
+    "Before the QKD process, Alice and Bob agree with the number of stages of reconciliation, $R_m$, as well as the reconciliation efficiency of each stage. \n",
+    "The reconciliation efficiency increases as reconciliation proceeds to the next stage, since the frozen bits is selected by bit-channel reliability, the corresponding set of frozen bits is always contained in the one of the next stage. \n",
     "The reconciliation will stop at any time when reconciliation is judged to be success -- which is checked and announced by Bob via CRC.\n",
-    "In the end of $k$-th stage, if the CRC check indicates reconciliation failure, then Bob announce this result -- tell Alice by sending the flag $\\sigma = 1$ through the public channel. \n",
-    "With $\\sigma = 1$, Alice appends additional syndrome by selecting the bits in $x_A$ of position $\\mathcal{F}_{k+1} \\oplus \\mathcal{F}_{k}$ and sending them through public channel. \n",
-    "Now Bob can do reconciliation while reusing previous error syndrome. The total reconciliation synrome is the one of $(k+1)$-th stage. \n",
+    "In the end of $k$-th stage, if the CRC check indicates failure of reconciliation, then Bob will announce this result -- tell Alice by sending the flag $\\sigma = 1$ through the public channel. \n",
+    "With $\\sigma = 1$, Alice appends additional syndrome by selecting the bits in $u_A$ of position $\\mathcal{F}_{k+1} \\oplus \\mathcal{F}_{k}$, i.e. the additional frozen bits of next stage, and sending them through public channel. \n",
+    "Now Bob can do reconciliation with new error syndrome appended to the one of former stages. \n",
     "\n",
     "AIR can hence have a very low failure rate, as long as the configured efficiency of the last stage is high enough. \n",
-    "Also, AIR can avoid the average efficiency to be too large for the adaptive reconciliation procedure. "
+    "Also, AIR can avoid the average efficiency to be too large because of the adaptive reconciliation procedure -- most sifted key pairs can be successfully reconciled with a low efficiency. "
    ]
   },
   {
@@ -68,9 +68,9 @@
    "source": [
     "### Import Necessary Libs\n",
     "\n",
-    "We use py_aff3ct to implement polar codes. \n",
-    "Customized py_aff3ct modules are implemented in the `src` directory. \n",
-    "Make sure you have compiled the py_aff3ct in the corresponding directory."
+    "We use a modified version of py_aff3ct library to implement polar codes, which can be found in `submodules` folder. \n",
+    "Make sure you have compiled the py_aff3ct in the corresponding directory.\n",
+    "Customized py_aff3ct modules are implemented in the `src` directory. "
    ]
   },
   {
@@ -205,9 +205,9 @@
     "$$f = \\frac{L - K}{L \\times H_2(p_{qBER})}.$$\n",
     "\n",
     "However, since AIR is an adaptive IR scheme, the efficiency can only be estimated from collected data. \n",
-    "More specifically, suppose the program is configured with 4 stages with efficiency $\\{f_i\\}_{i=1}^R$, and for $Q$ simulation samples, the failure of each stage is $\\{ E_i \\}_{i=1}^R$, then the overall efficiency is calculated as\n",
+    "More specifically, suppose the program is configured with $R_m = 4$ stages with efficiency $\\{f_i\\}_{i=1}^{R_m}$, and for $Q$ simulation samples, the failure of each stage is $\\{ E_i \\}_{i=1}^{R_m}$, then the overall efficiency is calculated as\n",
     "\n",
-    "$$f = \\sum_{i=1}^R \\frac{(E_{i-1} - E_{i})f_i}{Q}.$$\n",
+    "$$f = \\sum_{i=1}^{R_m} \\frac{(E_{i-1} - E_{i})f_i}{Q}.$$\n",
     "\n",
     "Here $E_{0} = Q$. \n",
     "\n",
@@ -588,7 +588,7 @@
    "source": [
     "### Simulation: Randomly Sample Sifted KEYs and Test the Performance of AIR Scheme\n",
     "\n",
-    "**Note that, once the sockets is bound to another sockets, you cannot simply overwrite the binding relation.** Hence:\n",
+    "**Note that, once a socket is bound to another socket, you cannot simply overwrite the binding relation.** Hence:\n",
     "\n",
     "- If you want to reconcile real sifted KEY data, then jump to the **Experiment** part.\n",
     "- If you want to test the codes, then jump to the **Step-by-step Test** part."
@@ -717,7 +717,7 @@
     "        [[src_alice[\"generate\"]], [], [mnt_fr[\"check_errors\"] for mnt_fr in mnt_stage] + [mnt_cascl[\"check_errors\"] for mnt_cascl in mnt_cascl_stage]], \n",
     "        [[mnt_fr[\"check_errors\"] for mnt_fr in mnt_stage] + [mnt_cascl[\"check_errors\"] for mnt_cascl in mnt_cascl_stage], [], []]\n",
     "    ], \n",
-    "    [2, 1], \n",
+    "    [3, 1], \n",
     "    [10], \n",
     "    [False]\n",
     ")\n",
@@ -747,7 +747,7 @@
      "output_type": "stream",
      "text": [
       "Total Frames | Frame Errors S(0) | Frame Errors S(-1) | Used Time | Remaining Time\n",
-      "        1000 |                73 |                  0 |  07:50:17 |      00:00:00\r"
+      "        1000 |                80 |                  2 |  05:23:15 |      00:00:00\r"
      ]
     }
    ],
@@ -797,15 +797,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stage 0 with efficiency 1.1799657981760419: Totally 1000 frames analyzed, 73 frame error occurred, 73 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 0.005818885751068592; Final FER: FR - 0.0729999989271164; CA-SCL decoding failure rate - 0.0729999989271164\n",
-      "Stage 1 with efficiency 1.1899698009723403: Totally 1000 frames analyzed, 32 frame error occurred, 32 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 0.002398437587544322; Final FER: FR - 0.03200000151991844; CA-SCL decoding failure rate - 0.03200000151991844\n",
-      "Stage 2 with efficiency 1.2099778065649367: Totally 1000 frames analyzed, 7 frame error occurred, 7 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 0.0004338531580287963; Final FER: FR - 0.007000000216066837; CA-SCL decoding failure rate - 0.007000000216066837\n",
-      "Stage 3 with efficiency 1.2499938177501297: Totally 1000 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 7.629394893626795e-09; Final FER: FR - 0.0010000000474974513; CA-SCL decoding failure rate - 0.0010000000474974513\n",
-      "Average efficiency: 1181.6164586374312\n"
+      "Stage 0 with efficiency 1.1799657981760419: Totally 1000 frames analyzed, 80 frame error occurred, 80 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 0.007040809839963913; Final FER: FR - 0.07999999821186066; CA-SCL decoding failure rate - 0.07999999821186066\n",
+      "Stage 1 with efficiency 1.1899698009723403: Totally 1000 frames analyzed, 41 frame error occurred, 41 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 0.002947135828435421; Final FER: FR - 0.04100000113248825; CA-SCL decoding failure rate - 0.04100000113248825\n",
+      "Stage 2 with efficiency 1.2099778065649367: Totally 1000 frames analyzed, 12 frame error occurred, 12 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 0.0008154296665452421; Final FER: FR - 0.012000000104308128; CA-SCL decoding failure rate - 0.012000000104308128\n",
+      "Stage 3 with efficiency 1.2499938177501297: Totally 1000 frames analyzed, 2 frame error occurred, 2 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 4.949951107846573e-05; Final FER: FR - 0.0020000000949949026; CA-SCL decoding failure rate - 0.0020000000949949026\n",
+      "Average efficiency: 1.1820666387632643\n"
      ]
     }
    ],
@@ -820,6 +820,8 @@
     "        average_efficiency += (effective_efficiency_stage[stage] + crc_efficiency_gain) * (mnt_stage[stage - 1].get_n_fe() - mnt_stage[stage].get_n_fe())\n",
     "        pass\n",
     "    pass\n",
+    "average_efficiency += (effective_efficiency_stage[-1] + crc_efficiency_gain) * mnt_stage[-1].get_n_fe()\n",
+    "average_efficiency = average_efficiency / num_samples\n",
     "print(\"Average efficiency: {}\".format(average_efficiency))"
    ]
   },
@@ -830,7 +832,9 @@
    "source": [
     "## Experiment: Reconcile Real Sifted KEY\n",
     "\n",
-    "**Configuration of Computation Graph**"
+    "**Configuration of Computation Graph**\n",
+    "\n",
+    "The truncaters are disabled in this part to show the decode result of every stage."
    ]
   },
   {
@@ -1053,16 +1057,16 @@
      "output_type": "stream",
      "text": [
       "alice bits: [[0 1 1 ... 0 0 1]]\n",
-      "  bob bits: [[0 1 1 ... 0 0 1]]\n",
-      "Differences: 3934\n",
+      "  bob bits: [[0 1 1 ... 0 0 0]]\n",
+      "Differences: 3770\n",
       "padded alice bits: [[0 1 1 ... 0 1 0]]\n",
-      "padded   bob bits: [[0 1 1 ... 0 1 0]]\n",
+      "padded   bob bits: [[0 1 1 ... 0 0 0]]\n",
       "1s on shortened position: 0 0\n",
       "encoded alice bits: [[0 1 1 ... 0 1 0]]\n",
       "1s on shortened position: 0\n",
-      "1s on info      position: 40596\n",
-      "encoded alice info bits: [[1 0 1 ... 1 0 1]]\n",
-      "1s: 40596\n",
+      "1s on info      position: 38789\n",
+      "encoded alice info bits: [[0 1 1 ... 1 0 1]]\n",
+      "1s: 38789\n",
       "encoded alice info bits with crc tag: [[0 1 1 ... 1 0 0]]\n",
       "numpy crc tag bits: [[0 1 1 0 1 1 0 1 1 1 1 1 0 1 1 0 0 1 1 0 1 1 0 0 0 1 1 0 0 1 0 0]]\n",
       "extracted crc tag: [[0 1 1 0 1 1 0 1 1 1 1 1 0 1 1 0 0 1 1 0 1 1 0 0 0 1 1 0 0 1 0 0]]\n",
@@ -1072,23 +1076,23 @@
       "np encoded alice frozen bits: [0 1 1 ... 0 0 1]\n",
       "select encoded alice codeword effective frozen bits properly.\n",
       "Bob decoding frozen vector - from alice: [[0 1 1 ... 0 0 0]]\n",
-      "1s                   : 12220\n",
-      "1s on frozen position: 12220\n",
+      "1s                   : 14027\n",
+      "1s on frozen position: 14027\n",
       "fill encoded alice codeword effective frozen bits properly.\n",
-      "Bob decoding llr vector - from padded bob sifted KEY: [[ 3.2875724 -3.2875724 -3.2875724 ...  3.2875724 -3.2875724  3.2875724]]\n",
-      "number of maximum values: 77896\n",
-      "number of minimum values: 53176\n",
+      "Bob decoding llr vector - from padded bob sifted KEY: [[ 3.2875724 -3.2875724 -3.2875724 ...  3.2875724  3.2875724  3.2875724]]\n",
+      "number of maximum values: 77804\n",
+      "number of minimum values: 53268\n",
       "sum (should equal the length N of polar code): 131072\n",
-      "Bob decoding shortened llr vector: [[ 3.2875724 -3.2875724 -3.2875724 ...  3.2875724 -3.2875724 55.88873  ]]\n",
+      "Bob decoding shortened llr vector: [[ 3.2875724 -3.2875724 -3.2875724 ...  3.2875724  3.2875724 55.88873  ]]\n",
       "number of shortened values - 0 (should equal the number of shortened positions): 25096\n",
       "number of shortened values - 1 (should equal 0                                ): 0\n",
-      "number of 0 values: 52800\n",
-      "number of 1 values: 53176\n",
+      "number of 0 values: 52708\n",
+      "number of 1 values: 53268\n",
       "sum (should equal the length N of polar code): 131072\n",
       "waiter operates properly.\n",
-      "Decode status: [[-1]]\n",
+      "Decode status: [[0]]\n",
       "Status 0 for success, -1 for failure. It is common to have a failure result for low efficiency reconciliation.\n",
-      "monitor check status: [[40130]]\n"
+      "monitor check status: [[0]]\n"
      ]
     }
    ],
