qkd-air.ipynb: add notes about QBER mismatching
- add notes on estimation of real QBER
- explain how configured one could be deviated from real QBER
- fix some improper outputs
- refine some codes about pc file loading

--- a/docs/qkd-air.ipynb
+++ b/docs/qkd-air.ipynb
@@ -150,7 +150,10 @@
      "text": [
       "Quantum Bit Error Rate (QBER) from dataset: 3813 / 105976 = 0.03597984449309278\n",
       "********************************\n",
-      "Configured QBER: 0.036\n"
+      "Configured QBER: 0.0345\n",
+      "********************************\n",
+      "Deviation between assumed QBER and statistical QBER: 0.001479844493092776\n",
+      "********************************\n"
      ]
     }
    ],
@@ -165,7 +168,7 @@
     "\n",
     "# Polar codes parameters\n",
     "# Assumed bit error rate\n",
-    "q_ber = 0.036 \n",
+    "q_ber = 0.0345\n",
     "\n",
     "# Polar code Block size\n",
     "# The polar code block size can be determined automatically\n",
@@ -186,8 +189,21 @@
     "print(\"Configured QBER: {}\".format(q_ber))\n",
     "if np.abs(q_ber - q_ber_stat) > 0.001:\n",
     "    print(\"*\"*32)\n",
-    "    print(\"WARNING: Configured QBER is very different from diluted statistical QBER, are you sure?\")\n",
+    "    print(\"Deviation between assumed QBER and statistical QBER: {}\".format(np.abs(q_ber - q_ber_stat)))\n",
     "    print(\"*\"*32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd48a178",
+   "metadata": {},
+   "source": [
+    "### Estimation of Assumed QBER\n",
+    "\n",
+    "In proposed protocol, configured QBER $p_{QBER}$ should be decided before the reconciliation phase, empirically. But we have no additional experiment data to obtain this empirical value here. Therefore, strictly speaking, we did not implement a complete QKD protocol. It becomes meaningful to consider the case that $p_{QBER}$ is deviated from the real QBER $p_{real}$, this could happen when only very limited resources are available for estimating $p_{real}$ before the reconciliation phase. \n",
+    "\n",
+    "Suppose we use sifted keys data collected from experiments of length $L = 105976$ to obtain an estimation $\\hat{p}_{real}$ of $p_{real}$, the $99\\%$ confidence interval (by the normal approximation of binomial distribution or by adopting the Bayesian posterior with $\\text{Beta}(1,1)$ as prior) of $\\hat{p}_{QBER}$ will be contained in interval $[0.0345, 0.0375]$. Then we can test the IR scheme, using polar codes optimized for $p_{QBER} = 0.036 \\pm 0.0015$ (i.e. `q_ber` in codes) and on simulated random samples obeys $p_{real} \\approx 0.035980$ (i.e. `q_ber_stat` in codes). The confidence interval will be larger for less samples. For example, consider $\\hat{p}_{real}$ estimated from $10000$ pairs of bit obeys error rate of $\\hat{p}_{real} = 0.036$. The $95\\%$ confidence interval will be approximately $[0.032, 0.04]$. \n",
+    "Such endpoint values can serve as values of $p_{QBER}$ (`p_ber` in codes) to test the worst-case performance of this IR scheme under such extreme conditions."
    ]
   },
   {
@@ -199,10 +215,10 @@
     "\n",
     "Note that, in this realization, when the sifted KEYs are shorter than polar codes, the polar codes will be shortened. \n",
     "Specifically, for sifted KEYs of length $L$, a $(N, K)$ polar code will be shortened to a $(L, K)$ polar code. \n",
-    "This implies that only $L - K$ frozen bits (of information) will be leaked to reconcile $L \\times H_2(p_{qBER})$ bits of error information.\n",
+    "This implies that only $L - K$ frozen bits (of information) will be leaked to reconcile $L \\times H_2(p_{QBER})$ bits of error information.\n",
     "Hence the reconciliation efficiency (with single stage and no CRC tag) is still: \n",
     "\n",
-    "$$f = \\frac{L - K}{L \\times H_2(p_{qBER})}.$$\n",
+    "$$f = \\frac{L - K}{L \\times H_2(p_{QBER})}.$$\n",
     "\n",
     "However, since AIR is an adaptive IR scheme, the efficiency can only be estimated from collected data. \n",
     "More specifically, suppose the program is configured with $R_m = 4$ stages with efficiency $\\{f_i\\}_{i=1}^{R_m}$, and for $Q$ simulation samples, the failure of each stage is $\\{ E_i \\}_{i=1}^{R_m}$, then the overall efficiency is calculated as\n",
@@ -233,8 +249,8 @@
       "----> Number of Shortened Bits: 25096\n",
       "Statistical Qubit Error Rate: 0.03597984449309278 -> H_2 = 0.2235460591884705\n",
       "----> Estimated Quantum Channel Leaked Bits (L * H_2(QBER)): 23690.51716855735\n",
-      "Configured Qubit Error Rate: 0.036 -> H_2 = 0.22364166448448083\n",
-      "----> Estimated Least Polar Code Frozen Bits (N - K): 23700.64903540734\n",
+      "Configured Qubit Error Rate: 0.0345 -> H_2 = 0.21647981144138728\n",
+      "----> Estimated Least Polar Code Frozen Bits (N - K): 22941.66449731246\n",
       "--------------------------------\n",
       "Configured Efficiency stages: [1.18 1.19 1.21 1.25]\n",
       "--------------------------------\n",
@@ -322,6 +338,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "polar code .pc file not found\n",
+      "try to load _cpp.pc file\n",
       "Totally 27922 bits appended to frozen bits set\n",
       "Totally 28159 bits appended to frozen bits set\n",
       "Totally 28633 bits appended to frozen bits set\n",
@@ -349,12 +367,23 @@
     "# fbgen_file.set_noise(noise)\n",
     "# frozen_bits_file = fbgen_file.generate()\n",
     "\n",
-    "with open(fb_file_dir, 'r') as f:\n",
-    "    lines = f.readlines()\n",
-    "    # The 4th line contains the reliability information\n",
-    "    reliability_line = lines[3].strip()\n",
-    "    # Convert to np.int64 array\n",
-    "    reliability_sorted_idx = np.array([int(x) for x in reliability_line.split()], dtype=np.int64)\n",
+    "try:\n",
+    "    with open(fb_file_dir, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "        # The 4th line contains the reliability information\n",
+    "        reliability_line = lines[3].strip()\n",
+    "        # Convert to np.int64 array\n",
+    "        reliability_sorted_idx = np.array([int(x) for x in reliability_line.split()], dtype=np.int64)\n",
+    "except Exception:\n",
+    "    print(\"polar code .pc file not found\")\n",
+    "    print(\"try to load _cpp.pc file\")\n",
+    "    fb_file_dir = '../conf/polar/bsc/n{}_bsc_ber{}_mu40_cpp.pc'.format(int(np.log2(block_encoded_bits)), q_ber)\n",
+    "    with open(fb_file_dir, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "        # The 4th line contains the reliability information\n",
+    "        reliability_line = lines[3].strip()\n",
+    "        # Convert to np.int64 array\n",
+    "        reliability_sorted_idx = np.array([int(x) for x in reliability_line.split()], dtype=np.int64)\n",
     "shortened_idx = generate_shortened_BGL(block_encoded_bits, shortened_bits)\n",
     "shortened_vec = np.zeros(block_encoded_bits, dtype=bool)\n",
     "shortened_vec[shortened_idx] = np.ones_like(shortened_vec[shortened_idx])\n",
@@ -596,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "afa3ce28",
    "metadata": {},
    "outputs": [],
@@ -705,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c2fad547",
    "metadata": {},
    "outputs": [],
@@ -717,7 +746,7 @@
     "        [[src_alice[\"generate\"]], [], [mnt_fr[\"check_errors\"] for mnt_fr in mnt_stage] + [mnt_cascl[\"check_errors\"] for mnt_cascl in mnt_cascl_stage]], \n",
     "        [[mnt_fr[\"check_errors\"] for mnt_fr in mnt_stage] + [mnt_cascl[\"check_errors\"] for mnt_cascl in mnt_cascl_stage], [], []]\n",
     "    ], \n",
-    "    [3, 1], \n",
+    "    [3, 1], # n_threads: more threads cost more cores and much more RAM\n",
     "    [10], \n",
     "    [False]\n",
     ")\n",
@@ -747,7 +776,7 @@
      "output_type": "stream",
      "text": [
       "Total Frames | Frame Errors S(0) | Frame Errors S(-1) | Used Time | Remaining Time\n",
-      "        1000 |                80 |                  2 |  05:23:15 |      00:00:00\r"
+      "        1000 |                45 |                  0 |  06:04:42 |      00:00:00\r"
      ]
     }
    ],
@@ -797,15 +826,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stage 0 with efficiency 1.1799657981760419: Totally 1000 frames analyzed, 80 frame error occurred, 80 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 0.007040809839963913; Final FER: FR - 0.07999999821186066; CA-SCL decoding failure rate - 0.07999999821186066\n",
-      "Stage 1 with efficiency 1.1899698009723403: Totally 1000 frames analyzed, 41 frame error occurred, 41 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 0.002947135828435421; Final FER: FR - 0.04100000113248825; CA-SCL decoding failure rate - 0.04100000113248825\n",
-      "Stage 2 with efficiency 1.2099778065649367: Totally 1000 frames analyzed, 12 frame error occurred, 12 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 0.0008154296665452421; Final FER: FR - 0.012000000104308128; CA-SCL decoding failure rate - 0.012000000104308128\n",
-      "Stage 3 with efficiency 1.2499938177501297: Totally 1000 frames analyzed, 2 frame error occurred, 2 CA-SCL decoding failure observed.\n",
-      "Final BER: FR - 4.949951107846573e-05; Final FER: FR - 0.0020000000949949026; CA-SCL decoding failure rate - 0.0020000000949949026\n",
-      "Average efficiency: 1.1820666387632643\n"
+      "Stage 0 with efficiency 1.1799657981760419: Totally 1000 frames analyzed, 45 frame error occurred, 45 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 0.004726112354546785; Final FER: FR - 0.04500000178813934; CA-SCL decoding failure rate - 0.04500000178813934\n",
+      "Stage 1 with efficiency 1.1899698009723403: Totally 1000 frames analyzed, 20 frame error occurred, 20 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 0.002000099280849099; Final FER: FR - 0.019999999552965164; CA-SCL decoding failure rate - 0.019999999552965164\n",
+      "Stage 2 with efficiency 1.2099778065649367: Totally 1000 frames analyzed, 8 frame error occurred, 8 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 0.0007243347354233265; Final FER: FR - 0.00800000037997961; CA-SCL decoding failure rate - 0.00800000037997961\n",
+      "Stage 3 with efficiency 1.2499938177501297: Totally 1000 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Final BER: FR - 7.629394893626795e-09; Final FER: FR - 0.0010000000474974513; CA-SCL decoding failure rate - 0.0010000000474974513\n",
+      "Average efficiency: 1.1811362665032086\n"
      ]
     }
    ],
@@ -839,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e86476f7",
    "metadata": {},
    "outputs": [],
@@ -980,11 +1009,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stage 0 with efficiency 1.1199839923805153: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
-      "Stage 1 with efficiency 1.1219679085468697: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Stage 0 with efficiency 1.1199839923805153: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
       "-------- The following stages will be truncated because the reconciliation is considered as successful.\n",
+      "Stage 1 with efficiency 1.1219679085468697: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
       "Stage 2 with efficiency 1.123994035695487: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 3 with efficiency 1.1259779518618416: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 3 with efficiency 1.1259779518618416: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
       "Stage 4 with efficiency 1.127961868028196: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
       "Stage 5 with efficiency 1.1299879951768135: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
       "Stage 6 with efficiency 1.1319719113431679: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
