qkd-air.ipynb: add results on real sifted KEYs
- add bsc pc file of BER 0.033
- add reconciliation results on real sifted KEYs
  with assumed QBER 0.0375

--- a/docs/qkd-air.ipynb
+++ b/docs/qkd-air.ipynb
@@ -273,7 +273,7 @@
     "\n",
     "configured_efficiency_stage = np.asarray([1.18, 1.19, 1.21, 1.25], dtype = np.float64)\n",
     "# For reconciling experiment data, finer efficiency stages should be configured to obtain better efficiency performance\n",
-    "# configured_efficiency_stage_experiment = np.arange(1.12, 1.142, 0.002, dtype = np.float64)\n",
+    "# configured_efficiency_stage_experiment = np.arange(1.12, 1.152, 0.002, dtype = np.float64)\n",
     "# configured_efficiency_stage = configured_efficiency_stage_experiment\n",
     "# The following efficiency stage can be used to step-by-step check the codes\n",
     "# configured_efficiency_stage = np.asarray([1.03, 1.25], dtype = np.float64)\n",
@@ -1009,18 +1009,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stage 0 with efficiency 1.1199839923805153: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "-------- The following stages will be truncated because the reconciliation is considered as successful.\n",
-      "Stage 1 with efficiency 1.1219679085468697: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 2 with efficiency 1.123994035695487: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 3 with efficiency 1.1259779518618416: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 4 with efficiency 1.127961868028196: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Configured QBER (Assumed QBER): 0.0375\n",
+      "Statistical QBER from Data:     0.03597984449309278\n",
+      "Stage 0 with efficiency 1.1199839923805153: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 1 with efficiency 1.1219679085468697: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 2 with efficiency 1.123994035695487: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 3 with efficiency 1.1259779518618416: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 4 with efficiency 1.127961868028196: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
       "Stage 5 with efficiency 1.1299879951768135: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 6 with efficiency 1.1319719113431679: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 7 with efficiency 1.1339980384917854: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "-------- The following stages will be truncated because the reconciliation is considered as successful.\n",
+      "Stage 6 with efficiency 1.1319719113431679: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 7 with efficiency 1.1339980384917854: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
       "Stage 8 with efficiency 1.1359819546581398: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 9 with efficiency 1.1379658708244944: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
-      "Stage 10 with efficiency 1.1399919979731117: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n"
+      "Stage 9 with efficiency 1.1379658708244944: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+      "Stage 10 with efficiency 1.1399919979731117: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Stage 11 with efficiency 1.1419759141394663: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Stage 12 with efficiency 1.1439598303058207: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Stage 13 with efficiency 1.145985957454438: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Stage 14 with efficiency 1.1479698736207926: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+      "Stage 15 with efficiency 1.1499960007694099: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n"
      ]
     }
    ],
@@ -1052,12 +1059,49 @@
     "    pass\n",
     "\n",
     "truncate_flag = 0\n",
+    "print(\"Configured QBER (Assumed QBER): {}\".format(q_ber))\n",
+    "print(\"Statistical QBER from Data:     {}\".format(q_ber_stat))\n",
     "for stage in range(len(mnt_stage)):\n",
     "    print(\"Stage {} with efficiency {}: Totally {} frames analyzed, {} frame error occurred, {} CA-SCL decoding failure observed.\".format(stage, effective_efficiency_stage[stage] + crc_efficiency_gain, mnt_stage[stage].get_n_analyzed_fra(), mnt_stage[stage].get_n_fe(), mnt_cascl_stage[stage].get_n_fe()))\n",
     "    if (mnt_cascl_stage[stage].get_n_fe() == 0) and (truncate_flag == 0):\n",
     "        print(\"-------- The following stages will be truncated because the reconciliation is considered as successful.\")\n",
     "        truncate_flag = 1\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3142b9a",
+   "metadata": {},
+   "source": [
+    "#### Reconcile Real Sifted KEYs with Imperfect Assumed QBER\n",
+    "\n",
+    "With assumed QBER $p_{QBER} = 0.0375$ and $p_{real} \\approx 0.036$ from real sifted KEYs data, the following results can be reproduced:\n",
+    "\n",
+    "```{text}\n",
+    "Configured QBER (Assumed QBER): 0.0375\n",
+    "Statistical QBER from Data:     0.03597984449309278\n",
+    "Stage 0 with efficiency 1.1199839923805153: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 1 with efficiency 1.1219679085468697: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 2 with efficiency 1.123994035695487: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 3 with efficiency 1.1259779518618416: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 4 with efficiency 1.127961868028196: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 5 with efficiency 1.1299879951768135: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "-------- The following stages will be truncated because the reconciliation is considered as successful.\n",
+    "Stage 6 with efficiency 1.1319719113431679: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 7 with efficiency 1.1339980384917854: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 8 with efficiency 1.1359819546581398: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "Stage 9 with efficiency 1.1379658708244944: Totally 1 frames analyzed, 1 frame error occurred, 1 CA-SCL decoding failure observed.\n",
+    "Stage 10 with efficiency 1.1399919979731117: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "Stage 11 with efficiency 1.1419759141394663: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "Stage 12 with efficiency 1.1439598303058207: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "Stage 13 with efficiency 1.145985957454438: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "Stage 14 with efficiency 1.1479698736207926: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "Stage 15 with efficiency 1.1499960007694099: Totally 1 frames analyzed, 0 frame error occurred, 0 CA-SCL decoding failure observed.\n",
+    "```\n",
+    "\n",
+    "Note that in order to reconcile the KEYs with better efficiency, the stages of efficiency is configured to be much finer than the one used in simulation. \n",
+    "In simulation, such a refined stages of efficiency could consume to much computation power."
    ]
   },
   {
